[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17", features = ["serde"] }
crossbeam = "0.8"
indicatif = "0.15"
rand = "0.7"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

